exports[`test fail.js 1`] = `
".
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

"
`;

exports[`test fail-flow.js 1`] = `
"/* @flow */

.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

"
`;

exports[`test fail-flow-2.js 1`] = `
"/**
 * @flow */

.
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow */

"
`;

exports[`test no_parse_error.js 1`] = `
"/*
@flow
*/

var x = 'Test';
var y = 5 / x;

var z: {
    type: number,
    y: string
} = {type: 1, y: 'hey'};
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/*
@flow
*/
var x = "Test";
var y = [object Number] / x;
var z: { type: number, y: string } = { type: [object Number], y: "hey" };
"
`;
